# Projects

./: .gitignore
BasketbollManager/: .ycm_extra_conf.py  BasketbollManager.pro  command.h.autosave  mainwindow.cpp  mainwindow.h  mainwindow.ui  playermanager.cpp  playermanager.h  playermanager.ui  playersmodel.cpp  playersmodel.h  playersmodel.qmodel  team.cpp  team.h
CrossZero/: Main.html  mainScript.js
Dictionary/: CMakeLists.txt  dictionary.c  dictionary.h  main.c  utils.c  utils.h
IT HomeWork/: HotelAdministrator.pro  HotelAdministrator.pro.user.c90335d  HotelAdministrator.pro.user.fab0bf8  Makefile  addnewuser.cpp  changeuser.h  changeuser.ui  hotel.cpp  hotel.h  hotelsroom.cpp  main.cpp  mainwindow.h  mainwindow.ui  status.cpp
TelegramCheckNumbers/: TelegramCheckNumbers.sln  TelegramCheckNumbers.userprefs
Work/: Makefile.Debug  Makefile.Release  Work.pro  Work.pro.user.c90335d  Work.pro.user.fab0bf8  addnewrequest.cpp  addnewrequest.h  addnewrequest.ui  admin.cpp  admin.h  authentication.cpp  authentication.h  authentication.ui  consumer.cpp  consumer.h  main.cpp  main_data_base.sql  mainwindow.cpp  mainwindow.h  mainwindow.ui  material.cpp  material.h  mysqlqueries.cpp  mysqlqueries.h  object_script.Work.Debug  object_script.Work.Release  request.cpp  request.h
АРМ Жюри/: АРМ.docx  Автоматизированное рабочее место жюри по олимпиадному программированию.pptx
Курсач ТП 4 семестр/: .ycm_extra_conf.py  CMakeLists.txt  invoice.cpp  invoice.hpp  main.cpp  product.cpp  product.hpp  utils.cpp  utils.hpp
Курсач инфа/: MFCApplication2.sln
(+93 files in other folders)
