cmake_minimum_required(VERSION 2.8)
project(Storage)
set(EXECUTABLE_NAME ${PROJECT_NAME})
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
file(GLOB SOURCE "*.cpp")
file(GLOB HEADERS "*.hpp")
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/products.txt
	 DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/invoices.txt
	  DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/balance.txt
	   DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
add_executable(${EXECUTABLE_NAME} ${SOURCE} ${HEADERS})
target_link_libraries(${EXECUTABLE_NAME})
